--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -43,3 +43,10 @@ jobs:
           context: parameter-extractor
           push: true
           tags: ghcr.io/re-mat/parameter-extractor:${{ env.branch }}
+
+      - name: Build and push csv stripper image
+        uses: docker/build-push-action@v4
+        with:
+          context: parameter-extractor
+          push: true
+          tags: ghcr.io/re-mat/dsc-csv-stripper:${{ env.branch }}
