Fix context for csv stripper

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -47,6 +47,6 @@ jobs:
       - name: Build and push csv stripper image
         uses: docker/build-push-action@v4
         with:
-          context: parameter-extractor
+          context: csv-stripper
           push: true
           tags: ghcr.io/re-mat/dsc-csv-stripper:${{ env.branch }}
