use Qualified base image

--- a/src/clowder_extractors/parameter_extractor/Dockerfile
+++ b/src/clowder_extractors/parameter_extractor/Dockerfile
@@ -1,7 +1,6 @@
-#FROM ghcr.io/re-mat/remat-clowder-extractor-base:latest
-FROM remat-clowder-extractor-base:latest
-
-
+# Use the Qualified Base Image only if you are building the image through the CI/CD pipeline or if the base image is published
+# If you are building the image locally, use the Unqualified Base Image
+FROM ghcr.io/re-mat/remat-clowder-extractor-base:latest
 # environemnt variables
 ENV RABBITMQ_QUEUE="remat.parameters.from_txt"
 
