--- a/src/clowder_extractors/csv_stripper/Dockerfile
+++ b/src/clowder_extractors/csv_stripper/Dockerfile
@@ -1,6 +1,7 @@
 # Use the Qualified Base Image only if you are building the image through the CI/CD pipeline or if the base image is published
 # If you are building the image locally, use the Unqualified Base Image
-FROM ghcr.io/re-mat/remat-clowder-extractor-base:latest
+ARG IMAGE_TAG=main
+FROM ghcr.io/re-mat/remat-clowder-extractor-base:${IMAGE_TAG}
 
 ENV RABBITMQ_QUEUE="remat.DSC.csv_stripper"
 
