--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "pyclowder==2.7.0",
     "openpyxl==3.1.1",
     "pandas",
-    "matplotlib==3.9.1"
+    "matplotlib==3.9.1",
+    "boxsdk"
 ]
 
 [tool.hatch.version]
